# tcc-verified

./: .dockerignore  .gitignore  CANONICAL_IMAGE_ID  Cargo.toml  README.md
.github/workflows/: bake-prover-image.yml
cloud/: Dockerfile  prove-remote.sh  provision.sh
docs/: architecture.md  compiler-economics.md  measurements.md  operations.md  provenance-design.md  roadmap.md
examples/: bench_large.c  bench_medium.c  bench_small.c  fib.c  hello.c  primes.c  sort.c
examples/multi-tu/: build.json
examples/multi-tu/src/: greet.c  greet.h  main.c
examples/musl-hello/: build.json  hello.c  prepare.sh
host/: Cargo.toml
host/src/: main.rs
jobfmt/: Cargo.toml
jobfmt/src/: lib.rs
methods/guest/: Cargo.toml  build.rs
methods/guest/shim/: compile.c  sys.c
methods/guest/src/: main.rs
verifier/: Cargo.toml  build.rs
verifier/src/: attestation.rs  main.rs
