[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
jobfmt = { path = "../jobfmt" }
risc0-zkvm = { version = "^3.0.5", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bincode = "1"
bytemuck = "1"

[features]
# GPU proving (NVIDIA): cargo build --release -p host --features cuda
cuda = ["risc0-zkvm/cuda"]
