[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
jobfmt = { path = "../jobfmt" }
risc0-zkvm = { version = "^3.0.5" }
bincode = "1"
sha2 = "0.10"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
